HOTFIX: Fix layout bug with library summaries

--- a/app/assets/stylesheets/modules/_library.scss
+++ b/app/assets/stylesheets/modules/_library.scss
@@ -51,6 +51,8 @@ Styleguide Library
 
 .Library-thumbnails {
   overflow: hidden;
+  list-style-type: none;
+  padding: 0;
   // Min height for libraries without elements
   min-height: 2em;
 }
